# ldr

./: Example.ipynb  Makefile  README.md  fxcm.cfg  fxcm.ipynb  proto.ipynb  py36-ldr.lst  requirements.txt  setup.cfg  xpy36-ldr.lst
ingresso/: _Sales0.py  __init__.py
ldr/: _Filterer.py  _Schema.py  _Selector.py  __init__.py  __main__.py
tests/: p1.lst  test_Test.py  test_Test1.py
tests/media/: files.lst
