[metadata]
name = ldr
author = Florian Heinle
author_email = launchpad@planet-tiax.de
summary = helper for audiobook (.m4b) creation
home-page = http://github.com/fheinle/ldr
license = MIT
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Analysis
keywords =
    multimedia
    audio
    chapters

[files]
packages =
    ldr
data_files =
    etc/ldr = etc/*
    doc/ldr = contrib/*
[entry_points]
console_scripts =
    ldr = ldr.__main__:main
ldr.config.drivers =
    ldr = ldr.cfg.driver:Plain

[pbr]
warnerrors = true
autodoc_tree_index_modules = True
